src/editor/snapshots/bmm__editor__save__tests__rendering_save_bookmark_document_escapes_toml_strings.snap
---
source: src/editor/save.rs
expression: rendered
---
#        __
#       / /  __ _  __ _
#      / _ \/  ' \/  ' \
#     /_.__/_/_/_/_/_/_/
#
# This bookmark will be saved for:
# https://example.com/rust

# Set this to an empty string to remove the title.
title = '''
A "quoted" title
with a second line\path'''

# Separate tags with commas. Set this to an empty string to remove all tags.
tags = "rust,tab\tvalue"
